whitespace fix for folder admin buttons
git-svn-id: https://svn.eionet.europa.eu/repositories/Naaya/trunk/eggs/naaya.groupware@14701 a0171fae-0946-0410-966d-b1775066cd26

--- a/naaya/groupware/skel/layout/groupware/eionet/gw_common_css.css
+++ b/naaya/groupware/skel/layout/groupware/eionet/gw_common_css.css
@@ -138,6 +138,7 @@ a.button-like, a.button-like:visited {
 #admin_this_folder a span {
 	padding:0em 0.3em;
 	margin: 0em 0.3em;
+	white-space: nowrap;
 }
 #admin_this_folder img {
 	vertical-align: middle;
